# FusionPlay

./: CMakeLists.txt  README.md  game.lua
lua/: cube.lua
scripts/: cube.lua  render.lua
src/: Input.h  engine.cpp  engine.h  font_renderer.cpp  font_renderer.h  graphics.cpp  graphics.h  input.cpp  lua_manager.cpp  lua_manager.h  main.cpp  menu.cpp  menu.h  renderer.cpp  renderer.h
